# peterpan

./: AE_peterpan.md  Makefile  README.md  image_generator.py  prepare.sh  requirements.txt  setup_all.sh
3DIRG_application/: Makefile  ae.sh  dataloader.py  utils.py
3DIRG_application/src/sw/: CMakeLists.txt  peterpan_pybind.cpp  peterpan_runner.cpp  peterpan_runner.hpp  rigid_registration_runner.cpp  rigid_registration_runner.hpp  trilli_main.cpp
3DIRG_application/src/sw/analyze/: README.md
3DIRG_application/src/sw/analyze/test/: CMakeLists.txt  analyze_and_extract.cpp  analyze_and_extract_and_iso_and_resize.cpp  analyze_and_extract_and_iso_and_resize_optimize.cpp
3DIRG_application/src/sw/app/: imagefusion.hpp
3DIRG_application/src/sw/core/: register.hpp
3DIRG_application/src/sw/include/image_utils/: image_utils.hpp
3DIRG_application/src/sw/include/software_mi/: software_mi.cpp
3DIRG_application/src/sw/include/versal_3dir/: Versal3DIR.cpp  Versal3DIR.hpp
3DIRG_application/src/sw/infastructure/: file_repository.hpp
aie/: Makefile  Map_Report.csv  sol.db
aie/data/: params_in.txt
aie/src/: graph_incremental.cpp  graph_incremental.h  kernel_adder.cpp  kernel_adder.h  kernel_in_pixels_splitter.cpp  kernel_in_pixels_splitter.h  kernel_mac_bottom.cpp  kernel_mac_bottom.h  kernel_mac_top.cpp  kernel_mac_top.h  kernel_merger_1_i.cpp  kernel_merger_1_j.cpp  kernel_merger_2.cpp  kernel_out_pixel_merger_2.cpp  kernel_out_pixel_merger_2.h  kernel_out_pixels_merger.cpp  kernel_out_pixels_merger.h
aie/src/coefficients/: kernel_compute_Ri.cpp  kernel_compute_Ri.h  kernel_compute_Riinv.cpp  kernel_compute_Riinv.h  kernel_compute_Rj.cpp  kernel_compute_Rj.h  kernel_compute_Rjinv.cpp  kernel_compute_Rjinv.h
aie/src/coordinates/: kernel_coordinates.cpp  kernel_coordinates.h
aie/src/transform/: kernel_transform_BL.cpp  kernel_transform_BL.h  kernel_transform_BR.cpp  kernel_transform_BR.h  kernel_transform_TL.cpp  kernel_transform_TL.h  kernel_transform_TR.cpp  kernel_transform_TR.h
common/generator/read_defines/: read_defines.py
data_movers/: Makefile  fetcher_A.cpp  fetcher_B.cpp  fetcher_C.cpp  fetcher_D.cpp  old_setup_mi_body.hpp  read_volume.hpp  scheduler_IPE.cpp  setup_aie.cpp  setup_interpolator.cpp  setup_interpolator_body.hpp  setup_mi.cpp  setup_mi_body.hpp  writer.cpp  writer_body.hpp
data_movers/generators/: movers_generator.py  setup_mi_generator.py
data_movers/testbench/ultimate/: stat.py  testbench_ultimate.cpp  verify.py
hw/: Makefile  config_generator.py  xclbin_overlay.cfg  xclbin_overlay.template.cfg  xclbin_overlay_onlyTX.template.cfg
mutual_info/: Makefile  mutual_information_master.cpp
mutual_info/include/hw/mutualInfo/: entropy.h  histogram.h  mutual_info.hpp  utils.hpp
paper_fig/csv/: 1p1_classicMoments_ampere.csv  1p1_classicMoments_mem_constr_dwarf2_vol60.csv  ICARUS_pow.csv  Time1p1_A100.csv  itk_pow_estimate_o3.csv  only_pyr_timings_dz256_levels2.csv  sitk_lynx_1p1.csv  timings_dz32_levels4_pyr_no_sw_prog.csv
paper_fig/figure6/: figure6.py
paper_fig/figure8/: figure8.py
scripts/: README.txt  run_registration_step.sh
soa/ITK/: utils.hpp
soa/athena/: IR.py
sw/: Makefile  host_code.cpp
sw/dataset/size_32_128/: script.py
sw/dataset/size_32_64/: gen_image.py
sw/include/image_utils/: image_utils.cpp
sw/include/software_mi/: software_mi.cpp  software_mi.hpp
